ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/570_function_type_undeclared_type.sol
contract C {
    fn a(fn(Nested)) external pure {}
}
// ----
// DeclarationError 7920: (37-43): Identifier not found or not unique.
